--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                     <li class="is-active"><a>
                             <span class="icon is-small"><i class="fas fa-calendar-alt" aria-hidden="true"></i></span>
                             <span>Calendrier Zen Flex</span></a></li>
-                    <li><a href="https://github.com/masfaraud/ZenFlex/blob/master/ROADMAP.md" target="_blank">
+                    <li><a href="https://github.com/dbabault/ZenFlex/blob/master/ROADMAP.md" target="_blank">
                         <span class="icon is-small"><i class="fa fa-road" aria-hidden="true"></i></span>
                         <span>A venir</span></a></li>
-                    <li><a href="https://github.com/masfaraud/ZenFlex/blob/master/README.md" target="_blank">
+                    <li><a href="https://github.com/dbabault/ZenFlex/blob/master/README.md" target="_blank">
                         <span class="icon is-small"><i class="fas fa-book" aria-hidden="true"></i></span>
                         <span>A propos</span></a>
                     <li>
@@ -152,10 +152,10 @@
     <footer class="footer">
         <div class="content has-text-centered">
             <p>
-                <strong>Calendrier Zen Flex</strong> par <a href="https://github.com/masfaraud">Steven Masfaraud</a>.
+                <strong>Calendrier Zen Flex</strong> par <a href="https://github.com/dbabault">Steven dbabault</a>.
                 Les
                 données sont fournies sans garantie.
-                <a href="https://github.com/masfaraud/ZenFlex" target="_blank">Source github</a>.
+                <a href="https://github.com/dbabault/ZenFlex" target="_blank">Source github</a>.
             </p>
         </div>
     </footer>
@@ -180,7 +180,7 @@
             const format_fr = { weekday: 'long', year: undefined, month: 'long', day: 'numeric' };
 
 
-            $.getJSON("https://masfaraud.github.io/ZenFlex/data.json", function (data) {
+            $.getJSON("https://dbabault.github.io/ZenFlex/data.json", function (data) {
 
                 var now = new Date();
                 var tomorrow = new Date();
